--- a/restaurant/src/main/resources/templates/login.html
+++ b/restaurant/src/main/resources/templates/login.html
@@ -1,22 +1,59 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:margin-bottom="http://www.w3.org/1999/xhtml">
 <head>
-  <link th:href="@{/css/bootstrap.min.css}"
-        href="../css/bootstrap.min.css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link th:href="@{/css/bootstrap.min.css}"
+        href="../css/bootstrap.min.css" rel="stylesheet">
   <title>My Hotple Login Page</title>
 </head>
 <body>
-<h1>Login Page</h1>
-<hr>
-<form action="/loginProc" method="post" name="loginForm">
-  <input id="username" type="text" name="username" placeholder="id"/>
-  <input id="password" type="password" name="password" placeholder="password"/>
-  <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
-  <input type="submit" value="login"/>
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+  <div class="container-fluid" bis_skin_checked="1">
+    <a class="navbar-brand" href="/">My Hotple</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor01" bis_skin_checked="1">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Map</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Board</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">My Place</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<form th:action="@{/loginProc}" method="post" name="loginForm">
+  <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto; text-align: center;">
+    <h2 style="margin-top: 50px; margin-bottom: 50px">로그인</h2>
+    <div class="form-floating mb-3" bis_skin_checked="1">
+      <input type="email" class="form-control" name="username" id="floatingEmail" placeholder="name@example.com">
+      <label for="floatingEmail">이메일</label>
+    </div>
+    <div class="form-floating mb-3" bis_skin_checked="1">
+      <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Password" autocomplete="off">
+      <label for="floatingPassword">비밀번호</label>
+    </div>
+  </div>
+  <div class="d-grid gap-2" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; text-align: center; margin-top: 30px; margin-bottom: 30px">
+    <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
+    <button class="btn btn-lg btn-primary" type="submit">Login</button>
+  </div>
 </form>
+<div style="text-align: center;">
+  <a href="join">계정이 없으신가요?</a>
+</div>
+
 </body>
 </html>
