--- a/restaurant/src/main/resources/templates/join.html
+++ b/restaurant/src/main/resources/templates/join.html
@@ -66,7 +66,7 @@
         </div>
     </div>
     <div class="d-grid gap-2" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; text-align: center; margin-top: 30px">
-        <button class="btn btn-lg btn-primary" type="submit">Join</button>
+        <button class="btn btn-lg btn-primary" type="submit" id="joinBtn">Join</button>
     </div>
 </form>
 </body>
