--- a/restaurant/src/main/resources/templates/join.html
+++ b/restaurant/src/main/resources/templates/join.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#">Board</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">My Place</a>
+                    <a class="nav-link" href="/myplace">My Place</a>
                 </li>
             </ul>
             <div class="btn-group" role="group" aria-label="Basic example" bis_skin_checked="1">
