feat: myplace, myplace_write 프론트 코드 추가

--- a/restaurant/src/main/resources/templates/login.html
+++ b/restaurant/src/main/resources/templates/login.html
@@ -46,7 +46,8 @@
       <label for="floatingPassword">비밀번호</label>
     </div>
   </div>
-  <div class="d-grid gap-2" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; text-align: center; margin-top: 30px; margin-bottom: 30px">
+  <div class="d-grid gap-2" bis_skin_checked="1"
+       style="width: 40%; margin-left: auto; margin-right: auto; text-align: center; margin-top: 30px; margin-bottom: 30px">
     <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
     <button class="btn btn-lg btn-primary" type="submit">Login</button>
   </div>
