--- a/restaurant/src/main/resources/templates/login.html
+++ b/restaurant/src/main/resources/templates/login.html
@@ -51,6 +51,10 @@
     <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
     <button class="btn btn-lg btn-primary" type="submit">Login</button>
   </div>
+  <div th:if="error">
+    <p class="lead" id="valid"
+       style="color: red; font-size:20px; text-align: center"><a th:text="${exception}"></a></p>
+  </div>
 </form>
 <div style="text-align: center;">
   <a href="join">계정이 없으신가요?</a>
