--- a/restaurant/src/main/resources/templates/logged_main.html
+++ b/restaurant/src/main/resources/templates/logged_main.html
@@ -30,7 +30,8 @@
                     <a class="nav-link" href="#">Board</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/myplace">My Place</a>
+                    <a class="nav-link" href="/myplace/list">My Place</a>
+<!--                    <a th:href="@{/myplace}" class="nav-link">My Place</a>-->
                 </li>
             </ul>
             <div>
