--- a/restaurant/src/main/resources/templates/myplace/write.html
+++ b/restaurant/src/main/resources/templates/myplace/write.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="#">Board</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/myplace">My Place
+                    <a class="nav-link active" href="/myplace/list">My Place
                         <span class="visually-hidden">(current)</span>
                     </a>
                 </li>
@@ -46,22 +46,21 @@
         </div>
     </div>
 </nav>
-<!--<form th:action="@{/joinProc}" method="post" name="joinForm">-->
-<!--    <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto; text-align: center;">-->
-<form>
+<!--<form th:action="@{/myplace/save}" method="post" name="joinForm">    -->
+<form action="/myplace/save" method="post">
     <fieldset>
         <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
             <h3 style="margin-top: 50px; text-align: center;">내 장소 저장하기</h3>
             <label class="col-form-label mt-4">장소 이름</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" name="placeName">
         </div>
         <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
             <label class="col-form-label mt-4">주소</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" name="address">
         </div>
         <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
-            <label for="exampleSelect1" class="form-label mt-4">카테고리</label>
-            <select class="form-select" id="exampleSelect1">
+            <label for="exampleSelect1" class="form-label mt-4" >카테고리</label>
+            <select class="form-select" id="exampleSelect1" name="category">
                 <option>맛집</option>
                 <option>카페</option>
                 <option>숙소</option>
@@ -71,12 +70,12 @@
             </select>
         </div>
         <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
-            <label for="exampleTextarea" class="form-label mt-4">내용</label>
-            <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+            <label for="exampleTextarea" class="form-label mt-4" >내용</label>
+            <textarea class="form-control" id="exampleTextarea" rows="3" name="contents"></textarea>
         </div>
         <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
             <label for="formFile" class="form-label mt-4">파일 첨부하기</label>
-            <input class="form-control" type="file" id="formFile">
+            <input class="form-control" type="file" id="formFile" name="photo">
         </div>
         <fieldset class="form-group">
             <div class="form-check form-switch" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; margin-top: 30px">
@@ -85,9 +84,9 @@
             </div>
         </fieldset>
         <div class="d-grid gap-2" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; text-align: center; margin-top: 30px">
-            <button class="btn btn-lg btn-primary" type="submit" id="joinBtn">저장하기</button>
+            <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
+            <button class="btn btn-lg btn-primary" type="submit">저장하기</button>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
     </fieldset>
 </form>
 </body>
