--- a/restaurant/src/main/resources/templates/myplace/write.html
+++ b/restaurant/src/main/resources/templates/myplace/write.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <link th:href="@{/css/bootstrap.min.css}"
@@ -31,7 +31,7 @@
                 </li>
             </ul>
             <div>
-                <span class="navbar-text" style="margin-right: 30px" th:if="${id != null}">안녕하세요, <span th:text="${id}" ></span>님!</span>
+                <span class="navbar-text" style="margin-right: 30px" th:if="${nickname != null}">안녕하세요, <span th:text="${nickname}" ></span>님!</span>
             </div>
             <form id="logoutForm" action="/logout" method="post">
                 <div class="btn-group" role="group" aria-label="Basic example" bis_skin_checked="1">
@@ -79,10 +79,12 @@
         </div>
         <fieldset class="form-group">
             <div class="form-check form-switch" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; margin-top: 30px">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked="">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" name="share" checked="">
                 <label class="form-check-label" for="flexSwitchCheckChecked">다른 사용자에게 내 장소를 공유합니다.</label>
             </div>
         </fieldset>
+        <!--        <input type="hidden" name="user_id" th:value="${id}" />-->
+        <input type="hidden" name="userId" th:value="${id}" />
         <div class="d-grid gap-2" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; text-align: center; margin-top: 30px">
             <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
             <button class="btn btn-lg btn-primary" type="submit">저장하기</button>
@@ -90,4 +92,17 @@
     </fieldset>
 </form>
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const checkbox = document.getElementById('flexSwitchCheckChecked');
+
+        checkbox.addEventListener('change', function () {
+            if (checkbox.checked) {
+                checkbox.value = 1;
+            } else {
+                checkbox.value = 0;
+            }
+        });
+    });
+</script>
 </html>
