feat: 게시글 공유 여부 DB 저장

--- a/restaurant/src/main/resources/templates/logged_main.html
+++ b/restaurant/src/main/resources/templates/logged_main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
