--- a/restaurant/src/main/resources/templates/myplace/write.html
+++ b/restaurant/src/main/resources/templates/myplace/write.html
@@ -77,15 +77,20 @@
             <label for="formFile" class="form-label mt-4">파일 첨부하기</label>
             <input class="form-control" type="file" id="formFile" name="photo">
         </div>
+<!--        <fieldset class="form-group">-->
+<!--            <div class="form-check form-switch" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; margin-top: 30px">-->
+<!--                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" name="share" checked="">-->
+<!--                <label class="form-check-label" for="flexSwitchCheckChecked">다른 사용자에게 내 장소를 공유합니다.</label>-->
+<!--            </div>-->
+<!--        </fieldset>-->
         <fieldset class="form-group">
             <div class="form-check form-switch" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; margin-top: 30px">
-                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" name="share" checked="">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" name="share" th:checked="${share}">
                 <label class="form-check-label" for="flexSwitchCheckChecked">다른 사용자에게 내 장소를 공유합니다.</label>
             </div>
         </fieldset>
-        <!--        <input type="hidden" name="user_id" th:value="${id}" />-->
         <input type="hidden" name="userId" th:value="${id}" />
-        <div class="d-grid gap-2" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; text-align: center; margin-top: 30px">
+        <div class="d-grid gap-2" bis_skin_checked="1" style="width: 40%; margin-bottom: 50px; margin-left: auto; margin-right: auto; text-align: center; margin-top: 30px">
             <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
             <button class="btn btn-lg btn-primary" type="submit">저장하기</button>
         </div>
