--- a/restaurant/src/main/resources/templates/myplace/write.html
+++ b/restaurant/src/main/resources/templates/myplace/write.html
@@ -46,8 +46,7 @@
         </div>
     </div>
 </nav>
-<!--<form th:action="@{/myplace/save}" method="post" name="joinForm">    -->
-<form action="/myplace/save" method="post">
+<form name="myplaceForm" action="/myplace/save" method="post">
     <fieldset>
         <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
             <h3 style="margin-top: 50px; text-align: center;">내 장소 저장하기</h3>
@@ -77,12 +76,6 @@
             <label for="formFile" class="form-label mt-4">파일 첨부하기</label>
             <input class="form-control" type="file" id="formFile" name="photo">
         </div>
-<!--        <fieldset class="form-group">-->
-<!--            <div class="form-check form-switch" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; margin-top: 30px">-->
-<!--                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" name="share" checked="">-->
-<!--                <label class="form-check-label" for="flexSwitchCheckChecked">다른 사용자에게 내 장소를 공유합니다.</label>-->
-<!--            </div>-->
-<!--        </fieldset>-->
         <fieldset class="form-group">
             <div class="form-check form-switch" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; margin-top: 30px">
                 <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" name="share" th:checked="${share}">
@@ -92,22 +85,39 @@
         <input type="hidden" name="userId" th:value="${id}" />
         <div class="d-grid gap-2" bis_skin_checked="1" style="width: 40%; margin-bottom: 50px; margin-left: auto; margin-right: auto; text-align: center; margin-top: 30px">
             <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
-            <button class="btn btn-lg btn-primary" type="submit">저장하기</button>
+            <button class="btn btn-lg btn-primary" type="submit" onclick="myplaceSubmit()">저장하기</button>
         </div>
     </fieldset>
 </form>
 </body>
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
-        const checkbox = document.getElementById('flexSwitchCheckChecked');
+    function myplaceSubmit(){
+        var myplaceForm = document.myplaceForm;
+        var placeName = myplaceForm.placeName.value;
+        var address = myplaceForm.address.value;
 
-        checkbox.addEventListener('change', function () {
-            if (checkbox.checked) {
-                checkbox.value = 1;
-            } else {
-                checkbox.value = 0;
-            }
-        });
-    });
+        if(!placeName && !address) {
+            alert("장소 이름과 주소를 입력해주세요");
+            myplaceForm.onsubmit = function() {
+                return false;
+            };
+        }
+        else if(!placeName) {
+            alert("장소 이름을 입력해주세요");
+            myplaceForm.onsubmit = function() {
+                return false;
+            };
+        }
+        else if(!address) {
+            alert("주소를 입력해주세요");
+            myplaceForm.onsubmit = function() {
+                return false;
+            };
+        }
+        else {
+            myplaceForm.submit();
+            alert("저장되었습니다.");
+        }
+    }
 </script>
 </html>
