--- a/restaurant/src/main/resources/templates/not_logged_main.html
+++ b/restaurant/src/main/resources/templates/not_logged_main.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="#">Map</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Board</a>
+                    <a class="nav-link" href="/shared">Shared Place</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/myplace/list">My Place</a>
