--- a/restaurant/src/main/resources/templates/shared.html
+++ b/restaurant/src/main/resources/templates/shared.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <link th:href="@{/css/bootstrap.min.css}"
           href="../css/bootstrap.min.css" rel="stylesheet">
-    <link th:href="@{/css/mainmap.css}"
-          href="../css/mainMap.css" rel="stylesheet">
-    <title>My Hotple Main Page</title>
+    <title>My Hotple Shared Place page</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
@@ -18,20 +16,18 @@
         <div class="collapse navbar-collapse" id="navbarColor01" bis_skin_checked="1">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/main">Home
-                        <span class="visually-hidden">(current)</span>
-                    </a>
-
+                    <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Map</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/shared">Shared Place</a>
+                    <a class="nav-link active" href="/shared">Shared Place
+                        <span class="visually-hidden">(current)</span>
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/myplace/list">My Place</a>
-<!--                    <a th:href="@{/myplace}" class="nav-link">My Place</a>-->
                 </li>
             </ul>
             <div>
@@ -50,32 +46,33 @@
         </div>
     </div>
 </nav>
-<h2 align="center" style="margin-top: 50px; margin-bottom: 50px">나만의 장소를 저장하세요!</h2>
-<div class="map_wrap">
-    <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
-    <div id="menu_wrap" class="bg_white">
-        <div class="option">
-            <div>
-                <form onsubmit="searchPlaces(); return false;">
-                    키워드 : <input type="text" value="이태원 맛집" id="keyword" size="15">
-                    <button type="submit">검색하기</button>
-                </form>
-            </div>
-        </div>
-        <hr>
-        <ul id="placesList"></ul>
-        <div id="pagination"></div>
-    </div>
+<h2 style="margin-top: 50px; margin-bottom: 50px; text-align: center">Shared Place List</h2>
+<div class="d-flex justify-content-end mb-3">
 </div>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dd6b3f845722d3c2dbd4187f59ed228d&libraries=services"></script>
-<!--<script src="../js/mainMap.js"></script>-->
-<script type="text/javascript" th:src="@{/js/mainMap.js}"></script>
-<div style="text-align: center; margin-top: 60px; margin-bottom: 60px " >
-    <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-    <p><small>This line of text is meant to be treated as fine print.</small></p>
-    <p>The following is <strong>rendered as bold text</strong>.</p>
-    <p>The following is <em>rendered as italicized text</em>.</p>
-    <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
-</div>
+<table class="table table-hover" style="text-align: center">
+    <thead>
+    <tr class="table-primary">
+        <th scope="col">번호</th>
+        <th scope="col">카테고리</th>
+        <th scope="col">장소 이름</th>
+        <th scope="col">글쓴이</th>
+        <th scope="col">작성일</th>
+        <th scope="col">조회</th>
+        <th scope="col">좋아요</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr class="table-active" th:each="myplace: ${myplaceList}">
+<!--        <th scope="row">Active</th>-->
+        <td th:text="${myplace.id}"></td>
+        <td th:text="${myplace.category}"></td>
+        <td><a th:href="@{|/myplace/${myplace.id}|}" th:text="${myplace.placeName}"></a></td>
+        <td th:text="${myplace.userId}"></td>
+        <td th:text="*{#temporals.format(myplace.createdTime, 'yyyy-MM-dd HH:mm')}"></td>
+        <td th:text="${myplace.views}"></td>
+        <td th:text="${myplace.likes}"></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
