--- a/restaurant/src/main/resources/templates/join.html
+++ b/restaurant/src/main/resources/templates/join.html
@@ -9,37 +9,7 @@
     <script type="text/javascript" th:src="@{/js/join.js}"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-    <div class="container-fluid" bis_skin_checked="1">
-        <a class="navbar-brand" href="/">My Hotple</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor01" bis_skin_checked="1">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Map</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/shared">Shared Place</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/myplace/list">My Place</a>
-                </li>
-            </ul>
-            <div class="btn-group" role="group" aria-label="Basic example" bis_skin_checked="1">
-                <button type="button"
-                        class="btn btn-secondary"
-                        onclick="location.href='login.html'"
-                        th:onclick="|location.href='@{/login}'|">Login</button>
-            </div>
-        </div>
-    </div>
-</nav>
-
+<nav th:replace="fragments.html :: main-nav"></nav>
 <form th:action="@{/joinProc}" method="post" name="joinForm">
     <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto; text-align: center;">
         <h2 style="margin-top: 50px; margin-bottom: 50px">회원가입</h2>
