--- a/restaurant/src/main/resources/templates/myplace/list.html
+++ b/restaurant/src/main/resources/templates/myplace/list.html
@@ -7,45 +7,7 @@
     <title>My Hotple myplace page</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-    <div class="container-fluid" bis_skin_checked="1">
-        <a class="navbar-brand" href="/main">My Hotple</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor01" bis_skin_checked="1">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Map</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/shared">Shared Place</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/myplace/list">My Place
-                        <span class="visually-hidden">(current)</span>
-                    </a>
-                </li>
-            </ul>
-            <div>
-                <span class="navbar-text" style="margin-right: 30px" th:if="${nickname != null}">안녕하세요, <span th:text="${nickname}" ></span>님!</span>
-            </div>
-            <form id="logoutForm" action="/logout" method="post">
-                <div class="btn-group" role="group" aria-label="Basic example" bis_skin_checked="1">
-                    <button type="button"
-                            class="btn btn-secondary"
-                            th:onclick="|location.href='@{/mypage}'|">MyPage</button>
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                    <button type="submit"
-                            class="btn btn-secondary">Logout</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</nav>
+<nav th:replace="fragments.html :: main-nav"></nav>
 <h2 style="margin-top: 50px; margin-bottom: 50px; text-align: center">My Place List</h2>
 <div class="d-flex justify-content-end mb-3">
     <button type="button" class="btn btn-secondary"
