--- a/restaurant/src/main/resources/templates/not_logged_main.html
+++ b/restaurant/src/main/resources/templates/not_logged_main.html
@@ -9,42 +9,7 @@
     <title>My Hotple Main Page</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-    <div class="container-fluid" bis_skin_checked="1">
-        <a class="navbar-brand" href="/">My Hotple</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor01" bis_skin_checked="1">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="/">Home
-                        <span class="visually-hidden">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Map</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/shared">Shared Place</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/myplace/list">My Place</a>
-                </li>
-            </ul>
-            <div class="btn-group" role="group" aria-label="Basic example" bis_skin_checked="1">
-                <button type="button"
-                        class="btn btn-secondary"
-                        onclick="location.href='login.html'"
-                        th:onclick="|location.href='@{/login}'|">Login</button>
-                <button type="button"
-                        class="btn btn-secondary"
-                        onclick="location.href='join.html'"
-                        th:onclick="|location.href='@{/join}'|">Join</button>
-            </div>
-        </div>
-    </div>
-</nav>
+<nav th:replace="fragments.html :: main-nav"></nav>
 <h2 align="center" style="margin-top: 50px; margin-bottom: 50px">나만의 장소를 저장하세요!</h2>
 <div class="map_wrap">
     <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
