feat: My Place 게시글 상세 보기 refactor: 중복된 뷰(head) 코드 제거 및 분리

--- a/restaurant/src/main/resources/templates/logged_main.html
+++ b/restaurant/src/main/resources/templates/logged_main.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+    <div th:replace="fragments.html :: main-head"></div>
     <link th:href="@{/css/mainmap.css}"
           href="../css/mainMap.css" rel="stylesheet">
     <title>My Hotple Main Page</title>
