--- a/restaurant/src/main/resources/templates/join.html
+++ b/restaurant/src/main/resources/templates/join.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+    <div th:replace="fragments.html :: main-head"></div>
     <title>My Hotple Join Page</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script type="text/javascript" th:src="@{/js/join.js}"></script>
