--- a/restaurant/src/main/resources/templates/myplace/detail.html
+++ b/restaurant/src/main/resources/templates/myplace/detail.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <link th:href="@{/css/bootstrap.min.css}"
         href="../css/bootstrap.min.css" rel="stylesheet">
-<!--  <title>My Hotple Shared Place page</title>-->
+  <title>My Hotple  Myplace page</title>
 </head>
 <body>
 <nav th:replace="fragments.html :: main-nav"></nav>
-
+<!--<div th:replace="fragments.html :: detail-div"></div>-->
 <div class="card mb-3" bis_skin_checked="1" style="width: 60%; margin: 50px auto;">
   <h3 class="card-header" th:text="${myplace.placeName}"></h3>
   <div class="card-body" bis_skin_checked="1">
     <h5 class="card-title" th:text="${myplace.address}"></h5>
-    <h6 class="card-subtitle text-muted" style="text-align: right"
-        th:utext="' 글쓴이: ' + ${myplace.userNickname + '<br> 조회수: ' + myplace.views}"></h6>
+    <h6 class="card-subtitle text-muted" style="text-align: right" th:text="' 조회수: ' + ${myplace.views}"></h6>
   </div>
   <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
     <rect width="100%" height="100%" fill="#868e96"></rect>
@@ -25,13 +24,14 @@
   </div>
   <ul class="list-group list-group-flush">
     <li class="list-group-item" th:text="${myplace.contents}"></li>
+    <li class="list-group-item" th:text="'공유 여부: ' + ${myplace.share}"></li>
   </ul>
   <div class="card-body" bis_skin_checked="1">
     <a href="#" class="card-link">좋아요 누르기</a>
     <div style="text-align: right">
-      <a href="/shared" class="card-link">목록</a>
-      <a href="/shared/update" class="card-link">수정</a>
-      <a href="/shared/delete" class="card-link">삭제</a>
+      <a href="/myplace/list" class="card-link">목록</a>
+      <a href="/myplace/update" class="card-link">수정</a>
+      <a href="/myplace/delete" class="card-link">삭제</a>
     </div>
   </div>
   <div class="card-footer text-muted" bis_skin_checked="1"
