--- a/restaurant/src/main/resources/templates/not_logged_main.html
+++ b/restaurant/src/main/resources/templates/not_logged_main.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+    <div th:replace="fragments.html :: main-head"></div>
     <link th:href="@{/css/mainmap.css}"
           href="../css/mainMap.css" rel="stylesheet">
     <title>My Hotple Main Page</title>
@@ -28,7 +26,6 @@
     </div>
 </div>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dd6b3f845722d3c2dbd4187f59ed228d&libraries=services"></script>
-<!--<script src="../js/mainMap.js"></script>-->
 <script type="text/javascript" th:src="@{/js/mainMap.js}"></script>
 <div style="text-align: center; margin-top: 60px; margin-bottom: 60px " >
     <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
