--- a/restaurant/src/main/resources/templates/shared/list.html
+++ b/restaurant/src/main/resources/templates/shared/list.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
-    <title>My Hotple Shared Place page</title>
+    <div th:replace="fragments.html :: main-head"></div>
+    <title>My Hotple Shared Place Page</title>
 </head>
 <body>
 <nav th:replace="fragments.html :: main-nav"></nav>
