--- a/restaurant/src/main/resources/templates/myplace/edit.html
+++ b/restaurant/src/main/resources/templates/myplace/edit.html
@@ -8,6 +8,51 @@
 <body>
 <nav th:replace="fragments.html :: main-nav"></nav>
 <h3 style="margin: 50px; text-align: center;">내 장소 수정하기</h3>
-<div th:replace="fragments.html :: write-edit"></div>
+<form name="myplaceForm" action="/myplace/edit" method="post">
+    <fieldset>
+        <div class="form-group"
+             bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
+            <label class="col-form-label mt-4">장소 이름</label>
+            <input type="hidden" name="id" th:value="${myplaceEdit.id}">
+            <input type="text" class="form-control" name="placeName" th:value="${myplaceEdit.placeName}">
+        </div>
+        <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
+            <label class="col-form-label mt-4">주소</label>
+            <input type="text" class="form-control" name="address" th:value="${myplaceEdit.address}">
+        </div>
+        <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
+            <label for="exampleSelect1" class="form-label mt-4" >카테고리</label>
+            <select class="form-select" id="exampleSelect1" name="category">
+                <option th:value="${myplaceEdit.category}" th:text="${myplaceEdit.category}"></option>
+                <option th:if="${myplaceEdit.category == null or myplaceEdit.category != '맛집'}">맛집</option>
+                <option th:if="${myplaceEdit.category == null or myplaceEdit.category != '카페'}">카페</option>
+                <option th:if="${myplaceEdit.category == null or myplaceEdit.category != '숙소'}">숙소</option>
+                <option th:if="${myplaceEdit.category == null or myplaceEdit.category != '관광지'}">관광지</option>
+                <option th:if="${myplaceEdit.category == null or myplaceEdit.category != '액티비티'}">액티비티</option>
+                <option th:if="${myplaceEdit.category == null or myplaceEdit.category != '기타'}">기타</option>
+            </select>
+        </div>
+        <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
+            <label for="exampleTextarea" class="form-label mt-4"></label>
+            <textarea class="form-control" id="exampleTextarea" rows="3" name="contents"
+                      th:value="${myplaceEdit.contents}" th:text="${myplaceEdit.contents}"></textarea>
+        </div>
+        <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
+            <label for="formFile" class="form-label mt-4">파일 첨부하기</label>
+            <input class="form-control" type="file" id="formFile" name="photo">
+        </div>
+        <fieldset class="form-group">
+            <div class="form-check form-switch" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; margin-top: 30px">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" name="share" th:checked="${myplaceEdit.share}">
+                <label class="form-check-label" for="flexSwitchCheckChecked">다른 사용자에게 내 장소를 공유합니다.</label>
+            </div>
+        </fieldset>
+        <input type="hidden" name="userId" th:value="${id}" />
+        <div class="d-grid gap-2" bis_skin_checked="1" style="width: 40%; margin-bottom: 50px; margin-left: auto; margin-right: auto; text-align: center; margin-top: 30px">
+            <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
+            <button class="btn btn-lg btn-primary" type="submit" onclick="myplaceSubmit()">저장하기</button>
+        </div>
+    </fieldset>
+</form>
 </body>
 </html>
