feat: myplace(내가 작성한 글) 페이징 처리

--- a/restaurant/src/main/resources/templates/myplace/list.html
+++ b/restaurant/src/main/resources/templates/myplace/list.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="row justify-content-center">
-    <div class="col-md-5" th:each="myplace: ${myplaceList}">
+    <div class="col-md-5" th:each="myplace: ${myplaceDTOPage}">
         <div class="card border-secondary mb-3" style="text-align: center" >
             <p class="card-header" th:text="'[' + ${myplace.category} + ']'" ></p>
             <div class="card-header" ><a th:href="@{|/myplace/${myplace.id}|}" th:text="${myplace.placeName}"></a></div>
@@ -25,6 +25,31 @@
             </div>
         </div>
     </div>
+</div>
+<div style="text-align: center; margin-bottom: 50px; margin-top: 30px">
+    <!-- 첫번째 페이지로 이동 -->
+    <!-- /shared/list?page=1 -->
+    <a th:href="@{/myplace/list(page=1)}">First</a>
+    <!-- 이전 링크 활성화 비활성화 -->
+    <!-- boardList.getNumber() 사용자:2페이지 getNumber()=1 -->
+    <a th:href="${myplaceDTOPage.first} ? '#' : @{/myplace/list(page=${myplaceDTOPage.number})}">prev</a>
+
+    <!-- 페이지 번호 링크(현재 페이지는 숫자만)
+            for(int page=startPage; page<=endPage; page++)-->
+    <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
+<!-- 현재페이지는 링크 없이 숫자만 -->
+        <span th:if="${page == myplaceDTOPage.number + 1}" th:text="${page}"></span>
+        <!-- 현재페이지 번호가 아닌 다른 페이지번호에는 링크를 보여줌 -->
+        <span th:unless="${page == myplaceDTOPage.number + 1}">
+            <a th:href="@{/myplace/list(page=${page})}" th:text="${page}"></a>
+        </span>
+    </span>
+
+    <!-- 다음 링크 활성화 비활성화
+        사용자: 2페이지, getNumber: 1, 3페이지-->
+    <a th:href="${myplaceDTOPage.last} ? '#' : @{/myplace/list(page=${myplaceDTOPage.number + 2})}">next</a>
+    <!-- 마지막 페이지로 이동 -->
+    <a th:href="@{/myplace/list(page=${myplaceDTOPage.totalPages})}">Last</a>
 </div>
 </body>
 </html>
