feat: 파일 이름 DB 저장 처리

--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -27,7 +27,7 @@
   <div class="card-body" bis_skin_checked="1">
     <a href="#" class="card-link">좋아요 누르기</a>
     <div style="text-align: right">
-      <a href="/shared/list" class="card-link">목록</a>
+      <a th:href="@{/shared/list(page=${page})}" class="card-link">목록</a>
     </div>
   </div>
   <div class="card-footer text-muted" bis_skin_checked="1"
