--- a/restaurant/src/main/resources/templates/myplace/detail.html
+++ b/restaurant/src/main/resources/templates/myplace/detail.html
@@ -27,7 +27,7 @@
   <div class="card-body" bis_skin_checked="1">
     <a href="#" class="card-link">좋아요 누르기</a>
     <div style="text-align: right">
-      <a th:href="@{/myplace/list}" class="card-link">목록</a>
+      <a th:href="@{/myplace/list(page=${page})}" class="card-link">목록</a>
       <a th:href="@{|/myplace/edit/${myplace.id}|}" class="card-link">수정</a>
       <a th:href="@{|/myplace/delete/${myplace.id}|}" class="card-link" onclick="confirmDelete()">삭제</a>
     </div>
