--- a/restaurant/src/main/resources/templates/myplace/list.html
+++ b/restaurant/src/main/resources/templates/myplace/list.html
@@ -18,7 +18,8 @@
     <div class="col-md-5" th:each="myplace: ${myplaceDTOPage}">
         <div class="card border-secondary mb-3" style="text-align: center" >
             <p class="card-header" th:text="'[' + ${myplace.category} + ']'" ></p>
-            <div class="card-header" ><a th:href="@{|/myplace/${myplace.id}|}" th:text="${myplace.placeName}"></a></div>
+            <div class="card-header" ><a th:href="@{|/myplace/${myplace.id}|(page=${myplaceDTOPage.number + 1})}" th:text="${myplace.placeName} "></a></div>
+
             <div class="card-body">
                 <h4 class="card-title" th:text="${myplace.address}"></h4>
                 <p class="card-text"  th:text="${myplace.contents}"></p>
